--- a/admindashboard/src/components/sidebar/SideBar.module.css
+++ b/admindashboard/src/components/sidebar/SideBar.module.css
@@ -1,3 +1,9 @@
+a.sidebarListItem {
+  text-decoration: none;
+  color: #555;
+  width: 100%;
+}
+
 .sidebar {
   flex: 1;
   height: calc(100vh - 50px);
@@ -33,8 +39,8 @@
   border-radius: 10px;
 }
 
-.sidebarListItem.active,
-.sidebarListItem:hover {
+.active,
+a.sidebarListItem:hover {
   background-color: rgb(212, 212, 245);
 }
 
